# RustEng

./: .gitignore  Cargo.toml  README.md  README_en.md  README_ja.md
.github/workflows/: ci.yml
doc/: how_to_use_script.md
docs/: how_to_use_config.md  how_to_use_script.md
docs/en_US/: how_to_use_config.md  how_to_use_script.md
docs/ja_JP/: how_to_use_config.md  how_to_use_script.md
docs/zh_CN/: how_to_use_config.md  how_to_use_script.md
savedata/: 0.toml  11.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml  extra.toml  user.toml
script/: ky01.reg
source/: ini.toml
source/cg/: length.toml
source/script/: auto.toml  ky01.reg  ky02.reg  ky03.reg  ky04.reg  ky05.reg
src/: config.rs  error.rs  main.rs  run.rs  script.rs
src/audio/: player.rs
src/config/: cg.rs  character_volume.rs  extra.rs  figure.rs  font.rs  initialize.rs  mod.rs  save_load.rs  script.rs  system.rs  text.rs  user.rs  voice.rs  volume.rs
src/executor/: auto_executor.rs  delay_executor.rs  executor.rs  mod.rs  script_executor.rs  skip_executor.rs  text_executor.rs
src/executors/: auto_executor.rs  delay_executor.rs  executor.rs  mod.rs  skip_executor.rs  text_executor.rs
src/media/: mod.rs  player.rs  video_player.rs
src/parser/: mod.rs  parser.rs  script_parser.rs
src/ui/: build.rs  initialize.rs  mod.rs  ui.rs
ui/: Cargo.toml  main_window.slint
ui/components/: backlog.slint  extra.slint  load.slint  main_config.slint  main_menu.slint  save.slint  settings.slint  story.slint
ui/src/: build.rs  main.rs
ui/styles/: colors.slint
(+18 files in other folders)
